@@ -1,5 +1,10 @@
 2005-12-15  Sam Steingold  <sds@gnu.org>
 
+	* socket.d (socket_getlocalname_aux, socket_getpeername): assume
+	that unknown sa_family means local connection (AF_UNIX, AF_LOCAL)
+
+2005-12-15  Sam Steingold  <sds@gnu.org>
+
 	* modules/bindings/win32/win32.lisp (with-handle): fixed
 
 2005-12-15  Sam Steingold  <sds@gnu.org>
